# Continuous-Turn-Taking-RNN

./: .gitignore  LICENSE  README.md  environment.yml  progress.txt  pyproject.toml  requirements.txt  setup.py
data_lib/: maptask.py
data_lib/maptask/: dm.py  dsets.py
data_lib/maptask/legacy/: features.py  maptask.py  utils.py  vardefs.py
notebooks/: 1.0-MU-Maptask-preprocess-POC.ipynb  2.0-MU-Skantze2017-MapTask-Dataset-POC.ipynb  3.0-MU-Skantze2017-Model-POC.ipynb  4.0-MU-Skantze2017-Exp-4-1-POC.ipynb  5.0-MU-Skantze2017-PauseDataset-POC.ipynb  6.0-MU-Skantze2017-Exp-4-2-POC.ipynb
scripts/: experiment.4_2.py
src/: __init__.py  continuous_lstm.py  dm.py  utils.py
src/configs/: project.toml  test.py
src/continuous_turn_taking/dms/: continuous_voice_activity.py
src/continuous_turn_taking/models/: continuous_lstm.py
src/data_lib/: __init__.py
src/data_lib/maptask/: __init__.py  dm.py  dsets.py  maptask.py
src/data_scripts/maptask/: features.py  main.py  utils.py  vardefs.py
src/experiments/: config.py  experiment.4_1.py
src/models/: va_predictor.py
src/scripts/: conf.toml  config.py  experiment.4_1.py  experiment_4_1.py  utils.py
src/turn_taking/: __init__.py  configs.py  utils.py
src/turn_taking/dsets/: __init__.py  utils.py
src/turn_taking/dsets/maptask/: dm.py  maptask.py
src/turn_taking/dsets/maptask/datasets/: __init__.py  base.py  constants.py  maptask.py  pause.py  pause_dset.py  utils.py  va_dset.py  voice_activity.py
src/turn_taking/models/: __init__.py  gcttLSTM.py
tests/: test_data_lib_utils.py  test_dm.py  test_maptask.py  test_va_predictor.py
tests/data_lib/: __init__.py  test_data_lib_utils.py  test_maptask.py
tests/turn_taking/: conftest.py  test_models.py
tests/turn_taking/maptask/: conftest.py  test_datasets.py  test_dm.py  test_reader.py
turn_taking/data_lib/: utils.py
turn_taking/data_lib/maptask/: dm.py  dsets.py  maptask.py
turn_taking/gcttLSTM/models/: __init__.py
