[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
]


[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = [
    "src"
]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]