[project]
name = "Continuous-Turn-Taking-RNN"
version = "0.0.1a"

description = "Continuous-Turn-Taking-RNN"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["src"]
# find = {"src"}  # Scanning implicit namespaces is active by default

# pyproject.toml
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

pythonpath = [
    "src"
]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]